--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 - Welcome</title>
+  <title>WEB1 - Welcome!!</title>
   <meta charset="utf-8">
 </head>
 <body>
@@ -11,8 +11,8 @@
     <li><a href="2.html">CSS</a></li>
     <li><a href="3.html">JS</a></li>
   </ol>
-  <h2>Welcome</h2>
-  <p><a href="https://www.w3.org/TR/2011/WD-html5-20110405/" target="_blank" title="famly spec">Web</a> "WWW" and "The Web" redirect here. For other uses of WWW, see WWW (disambiguation). For uses of web, see Web (disambiguation).
+  <h2>Welcomw!!</h2>
+    <p><a href="https://www.w3.org/TR/2011/WD-html5-20110405/" target="_blank" title="famly spec">Web</a> "WWW" and "The Web" redirect here. For other uses of WWW, see WWW (disambiguation). For uses of web, see Web (disambiguation).
 For the first web software, see WorldWideWeb.
 Not to be confused with the Internet. </p>
 
